; ModuleID = '/home/carl/AnghaBench/openssl/crypto/err/extr_err.c_ERR_load_ERR_strings.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/err/extr_err.c_ERR_load_ERR_strings.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@err_string_init = common dso_local global i32 0, align 4
@do_err_strings_init = common dso_local global i32 0, align 4
@ERR_str_libraries = common dso_local global i32 0, align 4
@ERR_str_reasons = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ERR_load_ERR_strings() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @do_err_strings_init, align 4
  %3 = call i32 @RUN_ONCE(i32* @err_string_init, i32 %2)
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %12

6:                                                ; preds = %0
  %7 = load i32, i32* @ERR_str_libraries, align 4
  %8 = call i32 @err_load_strings(i32 %7)
  %9 = load i32, i32* @ERR_str_reasons, align 4
  %10 = call i32 @err_load_strings(i32 %9)
  %11 = call i32 (...) @build_SYS_str_reasons()
  store i32 1, i32* %1, align 4
  br label %12

12:                                               ; preds = %6, %5
  %13 = load i32, i32* %1, align 4
  ret i32 %13
}

declare dso_local i32 @RUN_ONCE(i32*, i32) #1

declare dso_local i32 @err_load_strings(i32) #1

declare dso_local i32 @build_SYS_str_reasons(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
